# DEPRICATED-option_price_faas

./: .env  .firebaserc  .gitignore  .travis.yml  CNAME  Cargo.toml  Main.tf  README.md  asset-manifest.json  firebase.json  gcp_cloud_run.tf  index.html  index.js  manifest.json  openapi.yml  package-lock.json  package.json  precache-manifest.058c35f7f6d6c052b18875d6d60088bc.js  project.json  serverless.yml  service-worker.js  testCoverage.Dockerfile  testgit.js
.github/workflows/: deploy.yml  release.yml  test.yml
benches/: bench.rs  option_price_bench_faas.rs
docker/: constraints.Dockerfile  gateway.Dockerfile  option_price.Dockerfile
docs/: ErrorResponse.json  GetCGMYConstraintsExampleResponse.json  GetCGMYConstraintsResponse.json  GetConstraintsExampleResponse.json  GetHestonConstraintsExampleResponse.json  GetHestonConstraintsResponse.json  GetMarketConstraintsExampleResponse.json  GetMarketConstraintsResponse.json  GetMertonConstraintsExampleResponse.json  GetMertonConstraintsResponse.json  PostCGMYRequestDensity.json  PostCGMYRequestOptions.json  PostCGMYRequestRiskMetric.json  PostDensityExampleResponse.json  PostDensityResponse.json  PostHestonRequest.json  PostHestonRequestDensity.json  PostHestonRequestOptions.json  PostHestonRequestRiskMetric.json  PostMertonRequest.json  PostMertonRequestDensity.json  PostMertonRequestOptions.json  PostMertonRequestRiskMetric.json  PostOptionsExampleResponse.json  PostOptionsRequest.json  PostOptionsResponse.json  PostRiskMetricExampleResponse.json  openapi.yml  openapi_merged.yml  openapi_v2.yml
functions/: Cargo.toml  index.js  parameter1.json
functions/calibrator/: Cargo.toml  index.js  package.json
functions/calibrator/src/: main.rs
functions/pricer/: Cargo.toml  index.js  project.json
functions/pricer/src/: constraints.rs  main.rs
functions/pricer/src/lib/: constraints.rs
functions/src/lib/: constraints.rs  lib.rs  maps.rs
integration_tests/: pricer.test.js
knative/: constraints.yaml  service.yaml
lambda/: calibrator.js  marketData.js  pricer.js  spawnUtils.js
lambda/constants/: keys.js
lambda/utils/: httpUtils.js  spawnUtils.js
main_site/: .amplifyrc  .gitignore  README.md  config-overrides.js  package-lock.json  package.json  zzzconfig-overrides.js
main_site/amplify/backend/: amplify-meta.json
main_site/amplify/backend/awscloudformation/: nested-cloudformation-stack.yml
main_site/aws-api-gateway-developer-portal/: .gitignore  getStackFeatures.js  package-lock.json  package.json
main_site/aws-api-gateway-developer-portal/cloudformation/: base.yaml  packaged.yaml  template.yaml
main_site/aws-api-gateway-developer-portal/lambdas/backend/: express-server.js  package-lock.json
main_site/aws-api-gateway-developer-portal/lambdas/catalog-updater/: package-lock.json
main_site/public/: eula.txt  index.html  refund.txt
main_site/src/: App.js  App.test.js  FrontPage.js  Logo.js  Swagger.js  _git_commit.js  index.js  setupTests.js
main_site/src/actions/: constants.js  menu.js  menu.test.js  modal.js  modal.test.js  signIn.js  subscriptions.js
main_site/src/components/: ApiCard.js  ApiModal.js  ApiModal.test.js  AppMenu.js  AppMenu.test.js  AsyncLoad.js  AsyncLoad.test.js  Loading.js  Pricing.js  Pricing.test.js  PricingCard.js  RedirectToHomeIfLoggedIn.js  SignIn.js  SignIn.test.js  SubscriptionButtons.js
main_site/src/frontPage/: FrontPage.js
main_site/src/helperComponents/: AsyncLoad.js
main_site/src/pages/: Developers.js  Developers.test.js  FrontPage.js  FrontPage.test.js  Login.js  Products.js  Products.test.js  Register.js  Register.test.js  Subscriptions.js  Subscriptions.test.js  SuccessMarketPlaceRegister.js  SuccessMarketPlaceRegister.test.js  Swagger.js
main_site/src/products/: Products.js
main_site/src/reducers/: auth.js  auth.test.js  catalog.js  catalog.test.js  client.js  errors.js  errors.test.js  index.js  loading.js  loading.test.js  marketplaceAuth.js  menu.js  menu.test.js  modal.js  modal.test.js  subscriptions.js
main_site/src/register/: SignIn.js
main_site/src/routes/: names.js  params.js
main_site/src/services/: api-catalog.js  auth.js  aws.js
main_site/src/services/helpers/: promisifyAuth.js
main_site/src/styles/: finside.scss  frontPage.css  frontPage.less  menu.js  spanStyles.js  swaggerOverrides.css
models/: GetConstraintsResponse.json  GetConstraintsResponse_schema.json  PostDensityResponse.json  PostDensityResponse_schema.json  PostOptionResponse.json  PostOptionsRequest.json  PostOptionsRequest_schema.json  PostOptionsResponse.json  PostOptionsResponse_schema.json  PostRiskMetricResponse.json  PostRiskMetricResponse_schema.json
src/js/: copyBinaries.js  writeYml.js
src/lib/: constraints.rs  http_helper.rs  http_utils.rs  lib.rs  maps.rs
static/css/: 1.10e6db0d.chunk.css  1.10e6db0d.chunk.css.map  main.c94131a6.chunk.css  main.c94131a6.chunk.css.map
static/js/: 1.ff156d34.chunk.js  main.6cab8797.chunk.js  main.6cab8797.chunk.js.map
tests/: binaryLocation.json  constraints.test.js  density.test.js  densityError.json  parameter1.json  parameter2.json  parameter3.json  parameter4.json  parameter5.json  parameter6.json  parameter7.json  parameter8.json  pricer.test.js  pricerError.json  riskMetricError.json  riskmetric.test.js
tests/integration/: calibrator.test.js  pricer.test.js
tests/unit/: apploptions.csv  calibrator.test.js  marketData.test.js  pricer.test.js  results.json  yield_curve.json
(+14 files in other folders)
