[package]
name = "pricer"
version = "1.0.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/phillyfan1138/option_price_faas"
repository = "https://github.com/phillyfan1138/option_price_faas"
readme = "README.md"
license = "MIT"
description = "Option pricer"
autobins = false

[dependencies]
fang_oost_option = "0.27"
fang_oost = "0.13.7"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
cf_dist_utils = "0.6.1"
rayon = "1.0.1"
log = "^0.4" 
simple_logger = "^1" 
black_scholes = "0.3.0"
cf_functions = "0.10"
num-complex = "0.2"
#lambda_runtime = "0.1"
http = "0.1" #note...I shouldnt have to need this
lambda_http = { git = "https://github.com/softprops/aws-lambda-rust-runtime", branch="lambda-http" }
lambda_runtime = { git = "https://github.com/softprops/aws-lambda-rust-runtime", branch="lambda-http" }

[dev-dependencies]
rand = "0.5"
approx = "0.2.0"

[badges]
travis-ci = { repository = "phillyfan1138/option_price_faas" }

[[bin]]
name = "constraints"
path = "src/bin/output_constraints.rs"

[[bin]]
name = "pricer"
path = "src/bin/pricer.rs"

[[bin]]
name = "riskmetric"
path = "src/bin/riskmetric.rs"

[[bin]]
name = "density"
path = "src/bin/density.rs"

[lib]
name = "utils"
path = "src/lib/lib.rs"

