[package]
name = "pricer"
version = "0.1.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/phillyfan1138/option_price_faas"
repository = "https://github.com/phillyfan1138/option_price_faas"
readme = "README.md"
license = "MIT"
description = "Option pricer"

[dependencies]
fang_oost_option = "0.27"
fang_oost = "0.13.7"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
cf_dist_utils = "0.6.1"
rayon = "1.0.1"
black_scholes = "0.3.0"
cf_functions = "0.10"
num-complex = "0.2"
aws_lambda = { git = "https://github.com/srijs/rust-aws-lambda" }

[dev-dependencies]
rand = "0.5"

[badges]
travis-ci = { repository = "phillyfan1138/option_price_faas" }

[[bin]]
name = "output_constraints"
path = "src/bin/output_constraints.rs"

[[bin]]
name = "pricer"
path = "src/bin/pricer.rs"

[lib]
name = "constraints"
path = "src/lib/constraints.rs"