[package]
name = "pricer"
version = "0.1.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/phillyfan1138/option_price_faas"
repository = "https://github.com/phillyfan1138/option_price_faas"
readme = "README.md"
license = "MIT"
description = "Option pricer"

[dependencies]
fang_oost_option = "0.5.0"
fang_oost = "0.7.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
cf_dist_utils = "0.1.0"
rayon = "1.0.1"
black_scholes = "0.2.2"
cf_functions = "0.2.0"
num-complex = "0.2"


[badges]
travis-ci = { repository = "phillyfan1138/option_price_faas" }